Truncate source labels if necessary to avoid wrapping.

--- a/web/less/custom.less
+++ b/web/less/custom.less
@@ -118,6 +118,7 @@ li {
 	li {
 		font-size: 0.9em;
 		line-height: 1.8em;
+		white-space: nowrap;
 	}
 
 	a {
@@ -166,5 +167,9 @@ li {
 
 	.ingredients-and-sources {
 		.box-orient(vertical);
+	}
+
+	.sources {
+		width: auto;
 	}
 }
